form and better layer selector

--- a/index.html
+++ b/index.html
@@ -3,13 +3,33 @@
   <head>
     <meta charset="utf-8">
     <title>Raster Layer Demo</title>
-    <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css">
+    <link rel="stylesheet" href="styles/foundation.min.css">
+    <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-    <div id="map"></div>
-    <select id="layerSelector"></select>
-    <script src="http://libs.cartocdn.com/cartodb.js/v3/3.15/cartodb.js"></script>
-    <script src="main.js"></script>
+    <div class="grid-x">
+      <div class="medium-4 cell">
+        <form action="#" class="dashboard-form">
+          <div class="row">
+            <label for="layerSelector">Layer</label>
+            <select id="layerSelector"></select>
+          </div>
+          <div class="grid-x">
+            <label for="cartoCSSTextarea">Layer</label>
+            <textarea id="cartoCSSTextarea"></textarea>
+          </div>
+          <button class="button" id="applyBtn" type="button">Apply</button>
+        </form>
+      </div>
+      <div class="medium-8 cell">
+        <div class="l-map">
+          <div id="map"></div>
+        </div>
+      </div>
+    </div>
+    
+    <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
